--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -24,26 +24,51 @@ $fontsize: (
    h3: 24px,
    h4: 18px,
    h5: 16px,
-   p: 14px,
+   text: 14px,
    small: 11px,
 );
 
+$texttransform: (
+   none: none,
+   cap: capitalize,
+   upper: uppercase,
+);
+
 // Исправить значения на переменные
-@mixin fontstyle($fontfamily_mainweight: light, $fontsize: h5, $lh: 16px, $tt: normal) {
-   font-weight: $fontfamily_mainweight;
-   font-size: $fontsize;
-   line-height: $lh;
-   text-transform: $tt;
+@mixin fontstyle($fw, $fs, $tt) {
+   @if map-has-key($fontfamily_mainweight, $fw) {
+      font-weight: #{map-get($fontfamily_mainweight, $fw)};
+   } @else {
+      @warn "Unfortunately, no value could be retrieved from `#{$fw}`. "
+         + "Please make sure it is defined in `$breakpoints` map.";
+   }
+   @if map-has-key($fontsize, $fs) {
+      font-size: #{map-get($fontsize, $fs)};
+   } @else {
+      @warn "Unfortunately, no value could be retrieved from `#{$fs}`. "
+         + "Please make sure it is defined in `$breakpoints` map.";
+   }
+   @if map-has-key($texttransform, $tt) {
+      font-size: #{map-get($texttransform, $tt)};
+   } @else {
+      @warn "Unfortunately, no value could be retrieved from `#{$tt}`. "
+         + "Please make sure it is defined in `$breakpoints` map.";
+   }
 }
+
+// Example
+
+/* .featur-item__h4 {
+   @include fontstyle(semibold, h4, cap);
+}
+
+.featur-item__text {
+   @include fontstyle(regular, 0, cap);
+   font-size: 15px;
+} */
 
 // WIDTH
 $desktopwidth: 1140px;
-
-.container {
-   max-width: $desktopwidth + 30px;
-   margin: 0 auto;
-   padding: 0 15px;
-}
 
 // MEDIA
 $level_1: 1300px;
