--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -6,21 +6,149 @@
       justify-content: flex-end;
       align-items: center;
       min-height: 764px;
-      background: url(../assets/img/main/promo-background.png) -60% bottom no-repeat;
+      background: url(../assets/img/main/promo-background.png) -215px bottom no-repeat;
    }
-}
-
-// center content
-// center content
-
-// Features
-.featur-item {
-   @each $font, $size in $fontsize {
-      &__#{$font} {
-         font-size: $size;
+   &__h1 {
+      @include fontstyle(bold, h1, cap);
+      line-height: 40px;
+      margin-right: 100px;
+      position: relative;
+   }
+   &__h1::before {
+      content: "";
+      position: absolute;
+      left: -28px;
+      bottom: 3px;
+      display: block;
+      width: 12px;
+      height: 86px;
+      background: $bittersweet;
+   }
+   &__span {
+      @include fontstyle(semibold, 0, cap);
+      font-size: 32px;
+      line-height: 39px;
+      &-color {
+         color: $bittersweet;
       }
    }
 }
+
+// Categories
+
+.categories {
+   &__wrap {
+      display: grid;
+      gap: 30px;
+      grid-template-columns: 360px 360px 360px;
+      grid-template-rows: 260px 180px;
+      margin-top: 65px;
+      margin-bottom: 96px;
+   }
+   &__card1 {
+      background: url(../assets/img/main/categories-women.jpg);
+   }
+   &__card2 {
+      background: url(../assets/img/main/categories-men.jpg);
+   }
+   &__card3 {
+      background: url(../assets/img/main/categories-kids.jpg);
+   }
+   &__card4 {
+      background: url(../assets/img/main/categories-accesories.jpg);
+      grid-column: 1/4;
+   }
+   &__card {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
+   &-wrap__h5 {
+      @include fontstyle(regular, h5, cap);
+      line-height: 20px;
+      color: $white;
+   }
+   &-wrap__h3 {
+      @include fontstyle(semibold, h3, cap);
+      line-height: 29px;
+      color: $bittersweet;
+   }
+}
+
+// Product
+.product {
+   &__wrap {
+      text-align: center;
+      margin-bottom: 95px;
+   }
+
+// Title 
+   &__h2 {
+      @include fontstyle(regular, h2, cap);
+      line-height: 36px;
+   }
+   &__text {
+      @include fontstyle(regular, text, none);
+      line-height: 17px;
+      color: $nobel;
+   }
+// Container with cart 
+   &__grid-wrap {
+      display: grid;
+      gap: 30px;
+      grid-template-columns: repeat(auto-fill, 360px);
+      margin: 48px 0;
+   }
+   &__card {
+      display: grid;
+      grid-template-columns: 360px;
+      grid-template-rows: 420px 1fr;
+      @include fontstyle(regular, h4, upper);
+      background: #F8F8F8;
+   }
+   &-card__name {
+      text-decoration: none;
+      text-align: left;
+      display: grid;
+      grid-template-columns: 360px;
+      grid-template-rows: min-content 1fr min-content;
+      padding: 24px 0 20px;
+   }
+   &-card__h5 {
+      @include fontstyle(regular, 0, upper);
+      font-size: 13px;
+      line-height: 16px;
+      color: $black;
+      padding: 0 29px 0 17px;
+   }
+   &-card__text {
+      @include fontstyle(light, text, none);
+      line-height: 17px;
+      color: $zambezi;
+      padding: 12px 29px 18px 17px;
+   }
+   &-card__text-options {
+      @include fontstyle(regular, 0, upper);
+      font-size: 16px;
+      line-height: 20px;
+      color: $bittersweet;
+      padding: 0 29px 0 17px;
+   }
+
+// Botton
+   &__button {
+      display: inline-block;
+      @include fontstyle(regular, h5, none);
+      line-height: 20px;
+      color: $bittersweet;
+      padding: 14px 39px;
+      text-decoration: none;
+      border: 1px solid $bittersweet;
+   }
+}
+
+// Features
 
 .featur-item__h4 {
    @include fontstyle(semibold, h4, cap);
