--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*Обнуление*/
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -78,14 +79,16 @@ h6 {
 }
 
 /*--------------------*/
-/* .featur-item__h4 {
-   @include fontstyle(semibold, h4, cap);
+body {
+  font-family: "Lato";
 }
 
-.featur-item__text {
-   @include fontstyle(regular, 0, cap);
-   font-size: 15px;
-} */
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 .header {
   background: #000000;
 }
@@ -135,45 +138,205 @@ h6 {
       -ms-flex-align: center;
           align-items: center;
   min-height: 764px;
-  background: url(../assets/img/main/promo-background.png) -60% bottom no-repeat;
+  background: url(../assets/img/main/promo-background.png) -215px bottom no-repeat;
 }
 
-.featur-item__h1 {
+.promo__h1 {
+  font-weight: 900;
   font-size: 48px;
+  text-transform: capitalize;
+  line-height: 40px;
+  margin-right: 100px;
+  position: relative;
 }
 
-.featur-item__h2 {
-  font-size: 30px;
+.promo__h1::before {
+  content: "";
+  position: absolute;
+  left: -28px;
+  bottom: 3px;
+  display: block;
+  width: 12px;
+  height: 86px;
+  background: #f16d7f;
 }
 
-.featur-item__h3 {
-  font-size: 24px;
+.promo__span {
+  font-weight: 700;
+  text-transform: capitalize;
+  font-size: 32px;
+  line-height: 39px;
 }
 
-.featur-item__h4 {
-  font-size: 18px;
+.promo__span-color {
+  color: #f16d7f;
 }
 
-.featur-item__h5 {
+.categories__wrap {
+  display: -ms-grid;
+  display: grid;
+  gap: 30px;
+  -ms-grid-columns: 360px 360px 360px;
+      grid-template-columns: 360px 360px 360px;
+  -ms-grid-rows: 260px 180px;
+      grid-template-rows: 260px 180px;
+  margin-top: 65px;
+  margin-bottom: 96px;
+}
+
+.categories__card1 {
+  background: url(../assets/img/main/categories-women.jpg);
+}
+
+.categories__card2 {
+  background: url(../assets/img/main/categories-men.jpg);
+}
+
+.categories__card3 {
+  background: url(../assets/img/main/categories-kids.jpg);
+}
+
+.categories__card4 {
+  background: url(../assets/img/main/categories-accesories.jpg);
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+}
+
+.categories__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.categories-wrap__h5 {
+  font-weight: 400;
   font-size: 16px;
+  text-transform: capitalize;
+  line-height: 20px;
+  color: #ffffff;
 }
 
-.featur-item__text {
+.categories-wrap__h3 {
+  font-weight: 700;
+  font-size: 24px;
+  text-transform: capitalize;
+  line-height: 29px;
+  color: #f16d7f;
+}
+
+.product__wrap {
+  text-align: center;
+  margin-bottom: 95px;
+}
+
+.product__h2 {
+  font-weight: 400;
+  font-size: 30px;
+  text-transform: capitalize;
+  line-height: 36px;
+}
+
+.product__text {
+  font-weight: 400;
   font-size: 14px;
+  text-transform: none;
+  line-height: 17px;
+  color: #9f9f9f;
 }
 
-.featur-item__small {
-  font-size: 11px;
+.product__grid-wrap {
+  display: -ms-grid;
+  display: grid;
+  gap: 30px;
+  -ms-grid-columns: (360px)[auto-fill];
+      grid-template-columns: repeat(auto-fill, 360px);
+  margin: 48px 0;
+}
+
+.product__card {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 360px;
+      grid-template-columns: 360px;
+  -ms-grid-rows: 420px 1fr;
+      grid-template-rows: 420px 1fr;
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: uppercase;
+  background: #F8F8F8;
+}
+
+.product-card__name {
+  text-decoration: none;
+  text-align: left;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 360px;
+      grid-template-columns: 360px;
+  -ms-grid-rows: min-content 1fr min-content;
+      grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
+      grid-template-rows: min-content 1fr min-content;
+  padding: 24px 0 20px;
+}
+
+.product-card__h5 {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+  padding: 0 29px 0 17px;
+}
+
+.product-card__text {
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: none;
+  line-height: 17px;
+  color: #5d5d5d;
+  padding: 12px 29px 18px 17px;
+}
+
+.product-card__text-options {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
+  color: #f16d7f;
+  padding: 0 29px 0 17px;
+}
+
+.product__button {
+  display: inline-block;
+  font-weight: 400;
+  font-size: 16px;
+  text-transform: none;
+  line-height: 20px;
+  color: #f16d7f;
+  padding: 14px 39px;
+  text-decoration: none;
+  border: 1px solid #f16d7f;
 }
 
 .featur-item__h4 {
   font-weight: 700;
   font-size: 18px;
-  font-size: capitalize;
+  text-transform: capitalize;
 }
 
 .featur-item__text {
   font-weight: 400;
-  font-size: capitalize;
+  text-transform: capitalize;
   font-size: 15px;
 }
