--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*Обнуление*/
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -78,6 +79,10 @@ h6 {
 }
 
 /*--------------------*/
+body {
+  font-family: "Lato", sans-serif;
+}
+
 .container {
   max-width: 1170px;
   margin: 0 auto;
@@ -119,7 +124,7 @@ h6 {
 }
 
 .promo {
-  background: #F1E4E6;
+  background: #f1e4e6;
 }
 
 .promo .promo__wrap {
@@ -134,4 +139,278 @@ h6 {
           align-items: center;
   min-height: 764px;
   background: url(../assets/img/main/promo-background.png) -60% bottom no-repeat;
+}
+
+.feature, .footer {
+  background: #222224;
+}
+
+.feature__flex-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-align: center;
+  padding: 103px 0;
+}
+
+.feature__item {
+  max-width: 28%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.feature-item__h4 {
+  font-weight: 700;
+  text-transform: none;
+  font-size: 20px;
+  color: #fbfbfb;
+  padding: 25px 0 13px;
+}
+
+.feature-item__text {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: none;
+  line-height: 17px;
+  color: #fbfbfb;
+}
+
+.subscribe {
+  background: url(../assets/img/header-footer/footer-background.jpg) bottom no-repeat;
+  background-size: cover;
+}
+
+.subscribe__wrap, .subscribe__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 100px 0 130px;
+}
+
+.subscribe__info {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30%;
+  text-align: center;
+  padding: 0;
+}
+
+.subscribe-info__img {
+  border-radius: 100%;
+  margin-bottom: 30px;
+}
+
+.subscribe-info__h4 {
+  font-weight: 400;
+  text-transform: none;
+  font-size: 20px;
+  color: #222224;
+}
+
+.subscribe-info__h4-span {
+  font-style: italic;
+}
+
+.subscribe__form-wrap {
+  margin-right: 100px;
+  margin-top: 35px;
+  text-align: center;
+}
+
+.subscribe__h3 {
+  font-weight: 700;
+  font-size: 24px;
+  text-transform: uppercase;
+  line-height: 40px;
+}
+
+.subscribe__h4 {
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.subscribe__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 32px;
+}
+
+.subscribe__input {
+  padding: 16px 85px 16px 28px;
+  border-radius: 23px 0 0 23px;
+  background-color: #e1e1e1;
+  border: 1px solid #e1e1e1;
+}
+
+.subscribe__input::-webkit-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: capitalize;
+  opacity: 0.67;
+  color: #222224;
+  line-height: 54px;
+  letter-spacing: 0.35px;
+  line-height: normal;
+}
+
+.subscribe__input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: capitalize;
+  opacity: 0.67;
+  color: #222224;
+  line-height: 54px;
+  letter-spacing: 0.35px;
+  line-height: normal;
+}
+
+.subscribe__input::-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: capitalize;
+  opacity: 0.67;
+  color: #222224;
+  line-height: 54px;
+  letter-spacing: 0.35px;
+  line-height: normal;
+}
+
+.subscribe__input::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: capitalize;
+  opacity: 0.67;
+  color: #222224;
+  line-height: 54px;
+  letter-spacing: 0.35px;
+  line-height: normal;
+}
+
+.subscribe__button {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: capitalize;
+  color: #ffffff;
+  padding: 16px 18px;
+  background: #f16d7f;
+  border-radius: 0 23px 23px 0;
+  letter-spacing: 0.35px;
+}
+
+.footer__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__h5 {
+  font-weight: 400;
+  font-size: 16px;
+  text-transform: none;
+  color: #fbfbfb;
+}
+
+.footer__links {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 7px;
+  -ms-grid-columns: minmax(30px, 1fr) [auto-fit];
+  grid-template-columns: repeat(auto-fit, minmax(30px, 1fr));
+  max-width: 50%;
+  padding: 23px 0;
+}
+
+.footer-links__link {
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  font-size: 15px;
+  line-height: 32px;
+  color: #000000;
+  background: #ffffff;
+}
+
+.arrivals {
+  background-color: #f8f3f4;
+  padding: 60px 0;
+}
+
+.arrivals__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.arrivals__h3 {
+  font-weight: 400;
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #f16d7f;
+}
+
+.arrivals__breadcrumbs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.arrivals-breadcrumbs__link {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: capitalize;
+  color: #636363;
+  text-decoration: none;
+}
+
+.arrivals-breadcrumbs__list::after {
+  content: "/";
+  margin: 0 5px;
+}
+
+.arrivals-breadcrumbs__list:last-of-type::after {
+  content: "";
+  margin: 0;
+}
+
+.arrivals .active_bc {
+  color: #f16d7f;
 }
