--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -33,6 +33,7 @@
    }
    .active__bc {
       color: $bittersweet;
+      font-weight: 700;
    }
 }
 
@@ -178,6 +179,7 @@
    &-list__link {
       @include fontstyle(regular, text, upper);
       color: #ebebeb;
+      background: none;
    }
    &__current {
       color: #ef5b70;
