--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -99,7 +99,7 @@
       display: grid;
       gap: 30px;
       grid-template-columns: repeat(auto-fill, 360px);
-      margin: 48px 0;
+      margin: 48px auto;
       z-index: 1;
    }
    &__card {
