--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -24,6 +24,14 @@ body {
    font-family: $fontfamily_main;
 }
 
+section,
+article,
+header,
+footer,
+aside {
+   display: block;
+}
+
 $fontsize: (
    h1: 48px,
    h2: 30px,
