--- a/css/style.css
+++ b/css/style.css
@@ -83,18 +83,18 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 section,
 article,
 header,
 footer,
 aside {
   display: block;
-}
-
-.container {
-  max-width: 1170px;
-  margin: 0 auto;
-  padding: 0 15px;
 }
 
 .header {
@@ -607,7 +607,7 @@ aside {
 
 .product-sidebar__options {
   -ms-grid-column: 2;
-  grid-column-start: 2;
+      grid-column-start: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -775,53 +775,6 @@ aside {
 .fa-chevron-left,
 .fa-chevron-right {
   color: #000000;
-}
-.shopping {
-  margin-top: 96px;
-  margin-bottom: 128px;
-}
-.shopping__grid-wrap {
-  display: -ms-grid;
-  display: grid;
-  row-gap: 40px;
-}
-
-.shopping__card {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 262px 262px 97px;
-      grid-template-columns: 262px 262px 97px;
-}
-
-.shopping__flex-wrap {
-  width: 360px;
-}
-
-.shopping__h5 {
-  font-weight: 300;
-  font-size: 16px;
-  text-transform: uppercase;
-  line-height: 20px;
-}
-
-.shopping-delivery__adress {
-  min-width: 100%;
-  border: 1px solid #A4A4A4;
-  padding: 13px 0 16px 18px;
-  margin-top: 20px;
-}
-
-.shopping-delivery__button {
-  display: block;
-  margin-top: 23px;
-}
-
-.shopping-delivery__adress-select {
-  font-weight: 300;
-  font-size: 14px;
-  text-transform: capitalize;
-  line-height: 16px;
-  color: #B1B1B1;
 }
 
 .product__preview {
@@ -1020,13 +973,226 @@ aside {
   padding-left: 23px;
 }
 
+.shopping {
+  margin-top: 96px;
+  margin-bottom: 128px;
+}
+
+.shopping__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.shopping__grid-wrap {
+  display: -ms-grid;
+  display: grid;
+  row-gap: 40px;
+}
+
+.shopping__card {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 262px 262px 66px;
+      grid-template-columns: 262px 262px 66px;
+  -webkit-column-gap: 31px;
+          column-gap: 31px;
+}
+
+.shopping-name__h3 {
+  font-weight: 400;
+  font-size: 24px;
+  text-transform: capitalize;
+  line-height: 28px;
+  color: #222222;
+}
+
+.shopping-card__text {
+  font-weight: 400;
+  text-transform: capitalize;
+  font-size: 22px;
+  line-height: 27px;
+  color: #575757;
+}
+
+.shopping-card__text-block {
+  display: inline-block;
+}
+
+.shopping-card__text-color {
+  color: #f16d7f;
+}
+
+.shopping-card__input::-webkit-input-placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: capitalize;
+  line-height: 28px;
+  color: #656565;
+}
+
+.shopping-card__input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: capitalize;
+  line-height: 28px;
+  color: #656565;
+}
+
+.shopping-card__input::-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: capitalize;
+  line-height: 28px;
+  color: #656565;
+}
+
+.shopping-card__input::placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: capitalize;
+  line-height: 28px;
+  color: #656565;
+}
+
+.shopping__flex-wrap {
+  width: 360px;
+}
+
+.shopping__h5 {
+  font-weight: 300;
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: 20px;
+}
+
+.shopping-delivery__adress {
+  min-width: 100%;
+  border: 1px solid #a4a4a4;
+  padding: 13px 0 16px 18px;
+  margin-top: 20px;
+}
+
+.shopping-delivery__color {
+  color: #222222;
+}
+
+.shopping-delivery__button {
+  display: block;
+  border: 1px solid #a4a4a4;
+  margin-top: 23px;
+  padding: 11px 12px 11px 12px;
+  background: #ffffff;
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: capitalize;
+  line-height: 16px;
+  color: #b1b1b1;
+}
+
+.shopping-delivery__adress-select {
+  font-weight: 300;
+  font-size: 11px;
+  text-transform: uppercase;
+  line-height: 13px;
+  color: #b1b1b1;
+}
+
+.shopping__totalcost {
+  margin-top: 57px;
+  background: #f5f3f3;
+  padding: 40px 42px 40px 43px;
+  text-align: right;
+}
+
+.shopping-totalcost__small {
+  display: inline-block;
+  text-align: right;
+  font-weight: 400;
+  font-size: 11px;
+  text-transform: uppercase;
+  line-height: 13px;
+  color: #4a4a4a;
+  margin-bottom: 12px;
+}
+
+.shopping-totalcost__small-indent {
+  margin-right: 25px;
+}
+
+.shopping-totalcost__h5 {
+  display: inline-block;
+  font-weight: 300;
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: 19px;
+}
+
+.shopping-totalcost__h5-collor {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: 19px;
+  color: #f16d7f;
+  margin-left: 25px;
+  margin-bottom: 21px;
+}
+
+.shopping__border {
+  width: 100%;
+  height: 1px;
+  background: #e2e2e2;
+}
+
+.shopping-totalcost__button {
+  width: 100%;
+  display: inline-block;
+  border: 1px solid #f16d7f;
+  background: #f16d7f;
+  font-weight: 300;
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: 19px;
+  color: #ffffff;
+  padding: 14px;
+  margin-top: 17px;
+}
+
+.shopping__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 652px;
+  margin-top: 72px;
+}
+
+.shopping-button__text {
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: uppercase;
+  line-height: 17px;
+  color: #000000;
+  background: none;
+  border: 1px solid #a4a4a4;
+  padding: 17px 41px 16px 39px;
+}
+
 .footer__wrap {
-   display: -webkit-box;
-   display: -ms-flexbox;
-   display: flex;
-   -webkit-box-pack: justify;
-       -ms-flex-pack: justify;
-           justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
