--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -9,6 +9,7 @@
    &__grid-wrap {
       display: grid;
       row-gap: 40px;
+      margin-right: 25px;
    }
    // Left container
    // Cards product
@@ -16,17 +17,20 @@
       display: grid;
       grid-template-columns: 262px 262px 66px;
       column-gap: 31px;
+      box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
    }
    &-name__h3 {
       @include fontstyle(regular, h3, cap);
       line-height: 28px;
       color: #222222;
+      margin-bottom: 36px;
    }
    &-card__text {
       @include fontstyle(regular, 0, cap);
       font-size: 22px;
       line-height: 27px;
       color: #575757;
+      margin-top: 6px;
    }
    &-card__text-block {
       display: inline-block;
@@ -34,15 +38,28 @@
    &-card__text-color {
       color: $bittersweet;
    }
-   &-card__input::placeholder {
+   &-card__input {
       @include fontstyle(regular, h4, cap);
       line-height: 28px;
       color: #656565;
+      text-align: end;
+      width: 43px;
+      height: 24px;
+      border: 1px solid #EAEAEA;
+      margin-left: 24px;
    }
-
+   &-card__close {
+      margin-left: 30px;
+      cursor: pointer;
+   }
+   &-card__name, 
+   &-card__close {
+      margin-top: 22px;
+   }
    // Right container
    &__flex-wrap {
       width: 360px;
+      margin-top: 18px;
    }
    // Delivery registration
    &__h5 {
@@ -54,6 +71,12 @@
       border: 1px solid #a4a4a4;
       padding: 13px 0 16px 18px;
       margin-top: 20px;
+   }
+   &-delivery__adress-select {
+      @include fontstyle(light, small, upper);
+      line-height: 13px;
+      color: #b1b1b1;
+      cursor: pointer;
    }
    &-delivery__color {
       color: #222222;
@@ -69,11 +92,6 @@
       color: #b1b1b1;
    }
 
-   &-delivery__adress-select {
-      @include fontstyle(light, small, upper);
-      line-height: 13px;
-      color: #b1b1b1;
-   }
    // Total cost
    &__totalcost {
       margin-top: 57px;
@@ -126,7 +144,7 @@
    &__button {
       display: flex;
       justify-content: space-between;
-      width: 652px;
+      max-width: 652px;
       margin-top: 72px;
    }
    &-button__text {
