--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import "_nullstyle.scss";
-@import "_variables.scss";
+@import "_defaults.scss";
 @import "_header.scss";
 @import "_main.scss";
 @import "_catalog.scss";
