--- a/scss/_registration.scss
+++ b/scss/_registration.scss
@@ -1,7 +1,71 @@
 .registration {
    display: flex;
    justify-content: space-between;
-   margin: 65px 0 95px;
+   margin: 65px auto 95px;
+
+   // form 
+   &__form {
+      max-width: 360px;
+   }
+   &-form__h5 {
+      @include fontstyle(light, h5, none);
+      line-height: 19px;
+      color: #222222;
+   }
+   &-form__input {
+      width: 100%;
+      display: inline-block;
+      @include fontstyle(light, 0, none);
+      font-size: 13px;
+      line-height: 16px;
+      color: #B1B1B1;
+      padding: 13px 0 14px 15px;
+      border: 1px solid #A4A4A4;
+      margin-top: 20px;
+   }
+   &-form__label {
+      @include fontstyle(light, small, none);
+      line-height: 13px;
+      color: $black;
+      margin-right: 20px;
+   }
+   &-form__label-input {
+      margin: 32px 10px 32px 0;
+   }
+   &-form__text {
+      @include fontstyle(light, 0, none);
+      font-size: 13px;
+      line-height: 16px;
+      color: #B1B1B1;
+      margin: 15px 0 39px;
+   }
+   &-form__button {
+      @include fontstyle(regular, text, upper);
+      line-height: 17px;
+      color: $white;
+      background: $bittersweet;
+      padding: 15px 28px;
+      border: 1px solid $bittersweet;
+   }
+   &-form__button-arrow {
+      margin-left: 20px;
+   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
    &__advantages {
       max-width: 655px;
    }
@@ -10,12 +74,12 @@
          @include fontstyle(light, h3, upper);
       }
       &__text {
-         @include fontstyle(light, h3, 0);
+         @include fontstyle(light, h3, none);
          padding: 22px 0;
       }
    }
    &-list__item {
-      @include fontstyle(light, h3, 0);
+      @include fontstyle(light, h3, none);
       background: url(../img/registration/mark.png) left center no-repeat;
       padding-left: 45px;
       line-height: 40px;
