edited width in Cart page

--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -144,7 +144,7 @@
    &__button {
       display: flex;
       justify-content: space-between;
-      max-width: 652px;
+      width: 652px;
       margin-top: 72px;
    }
    &-button__text {
