--- a/css/style.css
+++ b/css/style.css
@@ -1194,7 +1194,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  max-width: 652px;
+  width: 652px;
   margin-top: 72px;
 }
 
