ne buzi na menya

--- a/scss/_registration.scss
+++ b/scss/_registration.scss
@@ -1,7 +1,7 @@
 .registration {
    display: flex;
    justify-content: space-between;
-   margin: 65px 0 95px;
+   margin: 65px auto 95px;
    &__advantages {
       max-width: 655px;
    }
