--- a/css/style.css
+++ b/css/style.css
@@ -1216,7 +1216,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 65px 0 95px;
+  margin: 65px auto 95px;
 }
 
 .registration__advantages {
