--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "_nullstyle.scss";
 @import "_defaults.scss";
+@import "_media.scss";
 @import "_header.scss";
 @import "_main.scss";
 @import "_catalog.scss";
