--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -247,8 +247,9 @@
    &__button {
       @include fontstyle(regular, text, cap);
       color: $white;
-      padding: 16px 18px;
+      padding: 15px 17px;
       background: $bittersweet;
+      border: 1px solid $bittersweet;
       border-radius: 0 23px 23px 0;
       letter-spacing: 0.35px;
    }
