--- a/css/style.css
+++ b/css/style.css
@@ -123,60 +123,6 @@ body {
   transition: all 0.1s linear;
 }
 
-@media (min-width: 768px) {
-  .input-hover:hover {
-    border: 1px solid #e6677893;
-    background: none;
-  }
-  .input-hover:hover::-webkit-input-placeholder {
-    color: #e6677893;
-  }
-  .input-hover:hover:-ms-input-placeholder {
-    color: #e6677893;
-  }
-  .input-hover:hover::-ms-input-placeholder {
-    color: #e6677893;
-  }
-  .input-hover:hover::placeholder {
-    color: #e6677893;
-  }
-  .input-hover:focus {
-    border: 1px solid #f16d7f;
-  }
-  .button-hover:hover {
-    background: #f16d7f;
-    color: #ffffff;
-  }
-  .button-hover:hover .button-icon {
-    fill: #ffffff;
-  }
-  .button-hover2:hover {
-    border: 1px solid #f16d7f;
-    color: #f16d7f;
-  }
-  .button-hover3:hover {
-    background: #ffffff;
-    color: #f16d7f;
-  }
-  .close:hover {
-    fill: #f16d7f;
-  }
-  .shadow:hover {
-    -webkit-box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.3);
-            box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.3);
-  }
-  .arrow-hover:hover i {
-    color: #f16d7f;
-  }
-  .link-hover:hover {
-    color: #f16d7f;
-  }
-  .item:hover path {
-    fill: #f16d7f;
-    stroke: #f16d7f;
-  }
-}
-
 .header {
   background: #000000;
 }
@@ -372,6 +318,7 @@ body {
   font-size: 18px;
   text-transform: uppercase;
   background: #f8f8f8;
+  position: relative;
 }
 
 .product-card__img {
@@ -416,6 +363,31 @@ body {
   line-height: 20px;
   color: #f16d7f;
   padding: 0 29px 0 17px;
+}
+
+.product .card-hover {
+  display: none;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  width: 138px;
+  border: 1px solid #ffffff;
+  background: none;
+  padding: 13px;
+  position: absolute;
+  top: 33%;
+  left: 30%;
+}
+
+.product .card-hover__text {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: none;
+  line-height: 17px;
+  color: #ffffff;
 }
 
 .product__button {
@@ -1400,4 +1372,76 @@ body {
   line-height: 32px;
   color: #000000;
   background: #ffffff;
+}
+
+@media (min-width: 768px) {
+  .input-hover:hover {
+    border: 1px solid #e6677893;
+    background: none;
+  }
+  .input-hover:hover::-webkit-input-placeholder {
+    color: #e6677893;
+  }
+  .input-hover:hover:-ms-input-placeholder {
+    color: #e6677893;
+  }
+  .input-hover:hover::-ms-input-placeholder {
+    color: #e6677893;
+  }
+  .input-hover:hover::placeholder {
+    color: #e6677893;
+  }
+  .input-hover:focus {
+    border: 1px solid #f16d7f;
+  }
+  .button-hover:hover {
+    background: #f16d7f;
+    color: #ffffff;
+  }
+  .button-hover:hover .button-icon {
+    fill: #ffffff;
+  }
+  .button-hover2:hover {
+    border: 1px solid #f16d7f;
+    color: #f16d7f;
+  }
+  .button-hover3:hover {
+    background: #ffffff;
+    color: #f16d7f;
+  }
+  .button-hover4:hover {
+    border: 1px solid #f16d7f;
+  }
+  .button-hover4:hover .card-hover__text, .button-hover4:hover .card-hover__img {
+    color: #f16d7f;
+  }
+  .button-hover4:hover .card-hover__text path, .button-hover4:hover .card-hover__img path {
+    fill: #f16d7f;
+  }
+  .close:hover {
+    fill: #f16d7f;
+  }
+  .arrow-hover:hover i {
+    color: #f16d7f;
+  }
+  .link-hover:hover {
+    color: #f16d7f;
+  }
+  .item:hover path {
+    fill: #f16d7f;
+    stroke: #f16d7f;
+  }
+  .shadow:hover {
+    -webkit-box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.3);
+            box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.3);
+  }
+  .filter-card:hover .product-card__img {
+    -webkit-filter: brightness(0.4);
+            filter: brightness(0.4);
+  }
+  .filter-card:hover .card-hover {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
