--- a/css/style.css
+++ b/css/style.css
@@ -388,7 +388,19 @@ body {
   padding: 0 29px 0 17px;
 }
 
-.product .card-hover {
+.product__button {
+  display: inline-block;
+  font-weight: 400;
+  font-size: 16px;
+  text-transform: none;
+  line-height: 20px;
+  color: #f16d7f;
+  padding: 14px 39px;
+  text-decoration: none;
+  border: 1px solid #f16d7f;
+}
+
+.card-hover {
   display: none;
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -405,24 +417,12 @@ body {
   left: 30%;
 }
 
-.product .card-hover__text {
+.card-hover__text {
   font-weight: 400;
   font-size: 14px;
   text-transform: none;
   line-height: 17px;
   color: #ffffff;
-}
-
-.product__button {
-  display: inline-block;
-  font-weight: 400;
-  font-size: 16px;
-  text-transform: none;
-  line-height: 20px;
-  color: #f16d7f;
-  padding: 14px 39px;
-  text-decoration: none;
-  border: 1px solid #f16d7f;
 }
 
 .feature, .footer {
